--- a/README
+++ b/README
@@ -1,9 +1,9 @@
 
 
 This archive contains the distribution Mojolicious-Plugin-UserMessages,
-version 0.510:
+version 0.511:
 
-  Mojolicious Plugin to manage user message(s) qeue(s)
+  Mojolicious Plugin to manage user message queue(s)
 
 This software is copyright (c) 2013 by Bruno Tavares.
 
